--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -2,7 +2,7 @@
 
 body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   @include border-radius;
-  box-shadow: 0px 11px 30px rgb(154 161 177 / 17%);
+  box-shadow: 0px 11px 30px rgba(154, 161, 177, 0.17);
   padding: 2em;
   background-color: $color-white;
   border-top: 8px solid $tertiary;
