Fixed shadow error

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -4,7 +4,7 @@
 
 $color-white: #ffffff;
 $color-black: #000000;
-$color-box-shadow: rgb(154 161 177 / 17%);
+$color-box-shadow: rgba(154, 161, 177, 0.17);
 $color-mint: #fa7268;
 $color-blue: #e5f8ff;
 $color-square-gradient: linear-gradient(4deg, rgba(143,236,202,.29) 55%, rgba(74, 247, 255, 0.08) 100%);
