--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -17,7 +17,8 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   width: 500px;
   height: 500px;
   border-radius: 2000px;
-  background: $color-blue;
+  background: var(--tertiary);
+  opacity: 0.2;
   right: 1px;
   top: -57px;
 }
@@ -30,8 +31,7 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   width: 300px;
   height: 300px;
   border-radius: 30px;
-  background: $color-square-webkit-gradient;
-  background: $color-square-gradient;
+  background: var(--quaternary);
   left: 70px;
   top: 350px;
   transform: rotate(74deg);
