Added gradient search background

--- a/common/common.scss
+++ b/common/common.scss
@@ -356,6 +356,12 @@ a:hover {
   }
 }
 
+.search-banner {
+  background: var(--tertiary);  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, var(--tertiary), var(--tertiary-high));  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, var(--tertiary), var(--tertiary-high)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 .custom-search-banner-wrap h1, .custom-search-banner-wrap p {
   color: $color-white;
 }
