Fixed colour bar at top of desktop version

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -5,7 +5,7 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   box-shadow: 0px 11px 30px rgba(154, 161, 177, 0.17);
   padding: 2em;
   background-color: $color-white;
-  border-top: 8px solid $tertiary;
+  border-top: 8px solid var(--tertiary);
   margin-top: .8em;
 }
 
