Minor changes to footer

--- a/common/common.scss
+++ b/common/common.scss
@@ -383,3 +383,7 @@ summary.select-kit-header.single-select-header.dropdown-select-box-header {
     border: 1px dashed var(--tertiary);
   }
 }
+
+.custom-footer {
+  background-color: var(--tertiary) !important;
+}
