--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -38,3 +38,7 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   transform: rotate(74deg);
   transform-origin: 0 100%;
 }
+
+.custom-footer .wrap {
+  width: 1110px;
+}
