--- a/common/common.scss
+++ b/common/common.scss
@@ -394,14 +394,15 @@ summary.select-kit-header.single-select-header.dropdown-select-box-header {
   background-size: 250px 44px;
   height: 44px;
   text-indent: 300px;
-  overflow: hidden;
+  overflow-x: hidden;
   width: 250px;
 }
 .custom-footer .first-box .heading::after {
   content: "Level 1, Melbourne Connect \A 700 Swanston St \A Carlton, Victoria 3053 \A Australia";
   display: block;
-  font-size: 0.875em;
+  font-size: 0.6em;
   line-height: 1.375rem;
   margin: 32px 0 16px 0;
+  text-indent: 0px;
   white-space: pre-wrap;
 }
