--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -39,6 +39,9 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   transform-origin: 0 100%;
 }
 
+.custom-footer {
+  padding: 120px 0px;
+}
 .custom-footer .wrap {
   width: 1110px;
 }
