--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -45,3 +45,6 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
 .custom-footer .wrap {
   width: 1110px;
 }
+.custom-footer .second-box .links {
+  margin: 0px 42px;
+}
