Search banner fix

--- a/common/common.scss
+++ b/common/common.scss
@@ -384,6 +384,10 @@ summary.select-kit-header.single-select-header.dropdown-select-box-header {
   }
 }
 
+.search-banner {
+  width: 1110px;
+}
+
 .custom-footer {
   background-color: var(--tertiary) !important;
   font-family: 'Inter',sans-serif !important;
