Search input fix

--- a/common/common.scss
+++ b/common/common.scss
@@ -387,6 +387,9 @@ summary.select-kit-header.single-select-header.dropdown-select-box-header {
 .search-banner {
   width: 1110px;
 }
+.search-input {
+  border: none !important;
+}
 
 .custom-footer {
   background-color: var(--tertiary) !important;
