--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -49,6 +49,11 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
 .custom-footer .first-box {
   min-height: 220px;
 }
+.custom-footer .second-box .links span:first-of-type {
+  font-family: var(--heading-font-family);
+  font-size: 1.125rem;
+  margin: 0px 0px 2rem 0px;
+}
 .custom-footer .second-box .links .list {
   margin: 0px 42px;
 }
