--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -6,7 +6,7 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   padding: 2em;
   background-color: $color-white;
   border-top: 8px solid var(--tertiary);
-  margin-top: .8em;
+  margin-top: 40px;
 }
 
 #main-outlet:after  {
