--- a/common/common.scss
+++ b/common/common.scss
@@ -385,6 +385,7 @@ summary.select-kit-header.single-select-header.dropdown-select-box-header {
 }
 
 .search-banner {
+  margin-top: 40px;
   width: 1110px;
 }
 .search-input {
