--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -39,9 +39,13 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
   transform-origin: 0 100%;
 }
 
+li.headerLink {
+  margin: 0px 2rem;
+}
 .headerLink a {
   border-bottom: 2px solid var(--white) !important;
-  font-size: 0.8em;
+  font-family: var(--heading-font-family);
+  font-size: 0.85em !important;
   font-weight: bold;
   text-transform: uppercase;
 }
